# szl-receipt

./: CODEOWNERS  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  dco.yml  sbom.yml  scorecard.yml  trivy.yml
examples/: governed_ai_you_can_prove.py  proof_carrying_inference.py
src/szl_receipt/: __init__.py  _canonical.py  _sign.py  attest.py  lambda_gate.py  pci.py  receipt.py  sdk.py
tests/: test_attest.py  test_pci.py  test_sdk.py  test_sign.py  test_vectors.py
